--- a/slides/03-Probability.Rmd
+++ b/slides/03-Probability.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Probability"
 subtitle: "DATA 606 - Statistics & Probability for Data Analytics"
-author: Jason Bryer, Ph.D., Angela Lui, Ph.D., and George Hagstrom, Ph.D.
-date: "September 25, 2024"
+author: Jason Bryer, Ph.D.
+date: "February 19, 2025"
 output:
   xaringan::moon_reader:
     css: ["assets/mtheme_max.css", "assets/fonts_mtheme_max.css"]
